// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/notes => should render slider with delete, show-fullsize and close buttons if attachment is selected 1`] = `
<div
  class="slider notes-slider"
>
  <div
    class="slider__items"
  >
    <div
      class="slider__item slider__item_active"
    >
      <div
        class="scalable-preview scalable-preview_active slider__preview"
      >
        <img
          class="scalable-preview__image"
          src="fileUrl"
        />
      </div>
    </div>
    <div
      class="slider__item"
    />
  </div>
  <div
    class="slider__toolbar slider__toolbar_visible"
  >
    <div
      class="slider__toolbar-right"
    >
      <div />
      <lego-components_button
        classname="notes-slider__button notes-slider__button_close"
        size="m"
        view="clear-inverse"
      />
    </div>
  </div>
  <lego-components_button
    classname="switch-arrow-button switch-arrow-button_right switch-arrow-button_theme_dark"
    size="xxxl"
    view="clear"
  />
</div>
`;

exports[`components/notes => should render slider without action buttons if attachment is selected on touch devices 1`] = `
<div
  class="slider notes-slider"
>
  <div
    class="slider__items"
  >
    <div
      class="slider__item slider__item_active"
    >
      <div
        class="scalable-preview scalable-preview_active slider__preview"
      >
        <img
          class="scalable-preview__image"
          src="fileUrl"
        />
      </div>
    </div>
    <div
      class="slider__item"
    />
  </div>
  <div
    class="slider__toolbar slider__toolbar_visible"
  >
    <div
      class="slider__toolbar-right"
    >
      <lego-components_button
        classname="notes-slider__button notes-slider__button_close"
        size="m"
        view="clear-inverse"
      />
    </div>
  </div>
</div>
`;
